--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
         <section class="svg-footer">
           <h3 class="h3-color">ENCUENTRENOS EN</h3>
           <ul class="div-svg-footer">
-          <li class="circle-svg"><a href=""><svg width="20"
+          <li class="circle-svg"><a class="icon-transition" href=""><svg width="20"
                 height="20"><use href="./img/icoms.svg#icon-instagram"></use></svg></a></li>
 <li class="circle-svg"><a href=""><svg width="20"
                 height="20"><use href="./img/icoms.svg#icon-twiter"></use></svg></a></li>
